Add method for destroy slider

--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
     </style>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <script src="node_modules/jquery/dist/jquery.min.js" defer></script>
-    <script src="plugin.js" defer></script>
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="js/plugin.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div id="gallery">
+    <img src="./img/1.jpg" alt="1">
+    <img src="./img/2.jpg" alt="2">
+    <img src="./img/3.jpg" alt="3">
+</div>
+<div id="gallery2">
     <img src="./img/1.jpg" alt="1">
     <img src="./img/2.jpg" alt="2">
     <img src="./img/3.jpg" alt="3">
